--- a/main.css
+++ b/main.css
@@ -12,13 +12,24 @@ html, body {
     cursor: pointer;
 }
 
+@keyframes reveal {
+    from {right: 0;}
+    to {right: -200px;}
+}
+
 #header {
+    transition: right 0.7s ease-out;
     position: fixed;
+    right: 0;
     width: 100%;
-    background: pink;
     z-index: 1;
     background: #2b3236;
     color: #ffffff;
+}
+
+#header[close] {
+    animation: reveal 0.1s;
+    right: 100%;
 }
 
 #header ul {
@@ -53,8 +64,13 @@ html, body {
     visibility: visible;
 }
 
+#footer[close] {
+    bottom: -50px;
+}
+
 #footer {
     position: fixed;
+    transition: bottom 0.7s ease-out;
     bottom: 20px;
     width: 77%;
 
