--- a/main.css
+++ b/main.css
@@ -65,12 +65,15 @@ html, body {
 }
 
 #footer[close] {
-    bottom: -50px;
+    opacity: 0;
+    width: 30%;
+    color: #e96e6e;
 }
 
 #footer {
     position: fixed;
-    transition: bottom 0.7s ease-out;
+    transition: all 0.7s ease;
+    opacity: 1;
     bottom: 20px;
     width: 77%;
 
@@ -136,3 +139,7 @@ html, body {
   ::-webkit-scrollbar-thumb:hover {
     background: #e96e6e; 
   }
+
+.hiding {
+    display: none;
+}
